--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,33 +1,55 @@
+@mixin mobile-only {
+  @media only screen and (max-width: 1040px) {
+    @content;
+  }
+}
+
+@mixin desktop-only {
+  @media only screen and (min-width: 1041px) {
+    @content;
+  }
+}
+
 @mixin flex {
-    display: flex;
+  display: flex;
 }
 
 @mixin flex--col {
-    @include flex();
-    flex-direction: column;
+  @include flex();
+  flex-direction: column;
 }
 
-@mixin flex--align-center{
-    @include flex();
-    align-items: center;
+@mixin flex--align-center {
+  @include flex();
+  align-items: center;
 }
 
 @mixin flex--align-center--justify-center {
-    @include flex--align-center();
-    justify-content: center;
+  @include flex--align-center();
+  justify-content: center;
 }
 
 @mixin flex--align-center--justify-space-between {
-    @include flex--align-center();
-    justify-content: space-between;
+  @include flex--align-center();
+  justify-content: space-between;
+}
+
+@mixin flex--justify-center {
+  @include flex();
+  justify-content: center;
 }
 
 @mixin flex--col--align-center {
-    @include flex--col();
-    align-items: center;
+  @include flex--col();
+  align-items: center;
 }
 
 @mixin flex--col--align-center--justify-center {
-    @include flex--col--align-center();
-    justify-content: center;
+  @include flex--col--align-center();
+  justify-content: center;
+}
+
+@mixin flex--col--justify-center {
+  @include flex--col();
+  justify-content: center;
 }
