Add route transition styling

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,8 @@
 @import "./App/ContentContainer.scss";
 @import "./App/AppFooter.scss";
 
+@import "./routes/index.scss";
+
 @import "./Contact/ContactPage.scss";
 
 @import "./Resume/ResumePage.scss";
