--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -69,3 +69,16 @@
   @include flex--col();
   justify-content: center;
 }
+
+@mixin gray-to-primary-blue-icon {
+  fill: $dark-gray;
+  cursor: pointer;
+  width: 36px;
+  height: 36px;
+  transition: fill $icon-transition ease-out;
+
+  &:hover {
+    fill: $primary-blue;
+    transition: fill $icon-transition ease-in;
+  }
+}
