--- a/frontend/src/styles/App/AppHeader.scss
+++ b/frontend/src/styles/App/AppHeader.scss
@@ -12,6 +12,9 @@ $link-padding: 10px;
 .app-header {
   @include flex--align-center();
   width: 100%;
+  position: fixed;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 
   @include themed() {
     background-color: theme-get($primary-color);
