--- a/frontend/src/styles/Resume/ResumePage.scss
+++ b/frontend/src/styles/Resume/ResumePage.scss
@@ -2,6 +2,10 @@
   &__resume-display {
     flex: 1;
 
+    .badge {
+      font-size: 12px;
+    }
+
     @include desktop-only {
       @include flex--justify-space-evenly();
     }
