--- a/frontend/src/styles/themes.scss
+++ b/frontend/src/styles/themes.scss
@@ -11,7 +11,7 @@ $themes: (
     $primary-color: $white,
     $secondary-color: $primary-blue,
     $overlay-color: $white,
-    $toggle-color: rgb($yellow, 0.5),
+    $toggle-color: $yellow,
     $font-color: inherit,
   ),
   dark: (
